# dev-bin

./: .env.template  .gitignore  AGENTS.md  GENERAL_KNOWHOW_code_samples.md  GENERAL_KNOWHOW_commands.md  GENERAL_KNOWHOW_prompts.md  README.md  README_switch_java.md  TOOLS_AGENTS.txt  TOOLS_INTERNAL.txt  _env_loader.sh  agent-browser-cleanup.sh  agents_files_cp.sh  aider.sh  asks.sh  audio_transcription.py  baider.sh  browsershot.sh  cg-task.sh  cgi_update_mac_stuff.sh  codecollector.py  codegiant-system-update.md  codegiant.py  complete_node_upgrade.sh  copilot-profile  copilot-session-to-md  cp_to_devsupport.sh  create_logo_blog.py  ctags_symbol_map.py  d2to.sh  data-dir-gget-coverage-checklist.md  data-dir-gget-coverage-matrix.md  data-dir-gget-coverage-plan.md  dev_file_find.sh  dev_find.sh  dev_history_find.sh  dev_last_edit.sh  gcd.sh  gclone.sh  gem.sh  (+37 more)
cg-task/: README.md  final-review-frontmatter-migration.md  final-review-session-evidence.md
cg-task/defaults/: architecture-review.txt  code-style.txt  diff-review.txt  discrepancy-check.txt  (+5 more)
data-dir-agents/: README.md  normalize_openspec_skill_aliases.py  propagate_definitions.py  test_normalize_openspec_skill_aliases.py  test_propagate_definitions.py
data-dir-gget/python/: Dockerfile  README.md  app.py  build.sh  cloudrun.env.yaml.example  constants.py  docker_run.sh  index.html  pyproject.toml
pi-coding-agent-config/: get_lm_studio_models.py  get_ollama_models.py  pi-model-discovery README.md  qwen-llamacpp-thinking-control.md
tests/: agent-browser-cleanup.test.sh  cg-task-frontmatter.test.sh
(+158 files in other folders)
